--- a/packages/frontend/src/css/index.css
+++ b/packages/frontend/src/css/index.css
@@ -9,7 +9,7 @@
 @import '../css/utils/columns.css';
 @import '../css/utils/svg.css';
 @import '../css/utils/form.css';
-@import '../css/utils/fonts.css';
+/* @import '../css/utils/fonts.css'; */
 
 
 @import '../css/shape-snap.css';
